# Taipei-MRT-Scheduler-App

./: LICENSE  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/TaipeiMRT/: CMakeLists.txt  LICENSE  README.md
app/src/main/cpp/TaipeiMRT/prettify/: prettify.cpp  prettify.h
app/src/main/cpp/TaipeiMRT/routing/: routing.cpp  routing.h
app/src/main/cpp/TaipeiMRT/utils/: arrival_times.cpp  arrival_times.h  basic.cpp  basic.h  cost.cpp  cost.h  interchange.cpp  interchange.h  path_duration.cpp  path_duration.h  utils.h
app/src/main/cpp/TaipeiMRT/utils/arrival_times/: parse_non_y_arrival_times.py  parse_y_arrival_times.py
app/src/main/cpp/TaipeiMRT/utils/arrival_times/raw/BL/: 12345.csv  67.csv
app/src/main/cpp/TaipeiMRT/utils/arrival_times/raw/G/: 12345.csv  67.csv
app/src/main/cpp/TaipeiMRT/utils/arrival_times/raw/O/: 12345.csv  67.csv
app/src/main/cpp/TaipeiMRT/utils/arrival_times/raw/R/: 12345.csv  6.csv  7.csv
app/src/main/cpp/TaipeiMRT/utils/arrival_times/raw/Y/: Y07_12345.txt  Y07_67.txt  Y08_12345.txt  Y08_67.txt  Y09_12345.txt  Y09_67.txt  Y10_12345.txt  Y10_67.txt  Y11_12345.txt  Y11_67.txt  Y12_12345.txt  Y12_67.txt  Y13_12345.txt  Y13_67.txt  Y14_12345.txt  Y14_67.txt  Y15_12345.txt  Y15_67.txt  Y16_12345.txt  Y16_67.txt  Y17_12345.txt  Y17_67.txt  Y18_12345.txt  Y18_67.txt  Y19_12345.txt  Y19_67.txt  Y20_12345.txt  Y20_67.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
